--- a/src/assets/style/index.css/TicTacToe.module.css
+++ b/src/assets/style/index.css/TicTacToe.module.css
@@ -55,3 +55,6 @@
           transform: translateY(0);
   background-color: #333;
 }
+.tic-tac-toe button:disabled {
+  background-color: lightgray;
+}
